discussion/kv_engine/140804/140804_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Clang-tidy: kb_bucket.(h/cc) and kv_bucket_iface.h

Change-Id: Iea1f5530a4a6c9f75f4011e09b8b0e37e29c1102

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-11-23 16:35:17.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-11-23 16:35:39.000000000
Message: 
Patch Set 2:

(3 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-23 16:55:12.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31997/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\kv_bucket.h(119): error C3668: "KVBucket::~KVBucket": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31997/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27606/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.h:119:17:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27606/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5810/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.h:119:17: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    ~KVBucket() override;
                ^~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/stl_pair.h:215:11: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
      _T2 second;                /// @c second is a copy of the second object
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:2656:55: note: in instantiation of template class "std::pair<cb::mcbp::Status, nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, unsigned long, double, std::allocator, adl_serializer> >" requested here
std::pair<cb::mcbp::Status, nlohmann::json> KVBucket::getCollections(
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5810/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.h:119:17:
error: only virtual member functions can be marked "override" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5810/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7607/ : FAILURE

Compile error at [2020-11-23T16:51:42.065Z] ../kv_engine/engines/ep/src/kv_bucket.h:119:17:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15170/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6315/ : FAILURE

Compile error at [2020-11-23T16:37:03.631Z] ../kv_engine/engines/ep/src/kv_bucket.h:119:17:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7235/ : FAILURE

Compile error at [2020-11-23T16:51:54.513Z] ../kv_engine/engines/ep/src/kv_bucket.h:119:5:
error: ?KVBucket::~KVBucket()? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7235/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7358/ : FAILURE

Compile error at [2020-11-23T16:50:48.206Z] ../kv_engine/engines/ep/src/kv_bucket.h:119:5:
error: ?KVBucket::~KVBucket()? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7358/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4344/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
